# pre-commit-tidy

./: .gitignore  .pre-commit-config-example.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .remotesyncrc.json  .remotesyncrc.yaml  .tidyrc.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  FEATURE_SUMMARY.md  HOOKS.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING_RESULTS.md  pyproject.toml  setup.cfg  setup.py  tidy.py  tox.ini
.github/: GIT_FLOW.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  renovate.yml
docs/: FEATURE_SUMMARY.md  REFERENCES.md  TESTING_RESULTS.md  ai-fix.md  remote-sync.md  test-multi-remote.txt  tidy.md
pre_commit/: ai_fix.py  binary_track.py  remote_sync.py  tidy.py
pre_commit_hooks/: __init__.py  tidy.py
tests/: __init__.py  conftest.py  test_ai_fix.py  test_binary_track.py  test_remote_sync.py  test_tidy.py
tests-1/: __init__.py
