[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-hooks"
dynamic = ["version"]
description = "Pre-commit hook for automated file organization - move files between directories based on configurable rules"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "codefuturist", email = "58808821+codefuturist@users.noreply.github.com"}
]
keywords = ["pre-commit", "hook", "file", "organization", "tidy", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "commitizen>=4.1",
    "yamllint>=1.35",
    "mdformat>=0.7",
    "mdformat-gfm>=0.3",
    "mdformat-black>=0.1",
    "tox>=4.0",
    "covdefaults>=2.3",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
tidy = "tidy:main"

[project.urls]
Homepage = "https://github.com/codefuturist/pre-commit-hooks"
Repository = "https://github.com/codefuturist/pre-commit-hooks"
Documentation = "https://github.com/codefuturist/pre-commit-hooks#readme"
Changelog = "https://github.com/codefuturist/pre-commit-hooks/blob/main/CHANGELOG.md"
Issues = "https://github.com/codefuturist/pre-commit-hooks/issues"

[tool.setuptools]
py-modules = ["tidy"]

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tidy"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tidy"]
branch = true
plugins = ["covdefaults"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
