[metadata]
name = pre_commit_hooks
version = 1.1.0
description = A collection of useful pre-commit hooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codefuturist/pre-commit-hooks
author = codefuturist
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    tidy = pre_commit_hooks.tidy:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
